Atualização do site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="pesquisa.png" type="image/png">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
