add de novo link

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Alex de Abreu - Desenvolvedor de Sistemas e Data Engineer Jr. com foco em back-end, automação e bancos de dados." />
+  <meta name="description"
+    content="Alex de Abreu - Desenvolvedor de Sistemas e Data Engineer Jr. com foco em back-end, automação e bancos de dados." />
   <title>Alex de Abreu - Apresentação</title>
 
   <!-- Favicon -->
@@ -15,25 +17,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-pV3Hfdm2rKh2FvHR9VYBqFb+Vh+0HbBvQ5Zt7p2kd1qx9NIfJ94cFz6QxCpCjXwJ6nYJzRUz3jxltO2SxwQEkQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
-    <img
-      src="https://lh3.googleusercontent.com/a/ACg8ocLI4HwDyEu4UoKtKdDBvhV9cSCW2m-B9Nsj4lIZTl0UK_8GMyNB=s288-c-no"
-      alt="Foto de Alex de Abreu"
-      class="profile-pic"
-      loading="lazy"
-    />
+    <img src="https://lh3.googleusercontent.com/a/ACg8ocLI4HwDyEu4UoKtKdDBvhV9cSCW2m-B9Nsj4lIZTl0UK_8GMyNB=s288-c-no"
+      alt="Foto de Alex de Abreu" class="profile-pic" loading="lazy" />
     <h1>Alex de Abreu</h1>
     <h3 class="subtitulo">Desenvolvedor de Sistemas | Data Engineer Jr. | Entusiasta de Tecnologia</h3>
   </header>
@@ -42,13 +37,21 @@
     <section aria-label="Sobre mim">
       <h2>Sobre mim</h2>
       <p>
-        Olá! Sou Alex, tenho 29 anos, natural de São Paulo e atualmente resido no Rio Grande do Norte. Minha trajetória profissional começou no atendimento ao cliente, onde desenvolvi habilidades essenciais como escuta ativa, empatia e foco em soluções — competências que hoje aplico na área de tecnologia para compreender necessidades e aprimorar processos.
+        Olá! Sou Alex, tenho 29 anos, natural de São Paulo e atualmente resido no Rio Grande do Norte. Minha trajetória
+        profissional começou no atendimento ao cliente, onde desenvolvi habilidades essenciais como escuta ativa,
+        empatia e foco em soluções — competências que hoje aplico na área de tecnologia para compreender necessidades e
+        aprimorar processos.
       </p>
       <p>
-        Desde 2023, venho me dedicando ao Desenvolvimento de Sistemas, com ênfase em back-end, automação e bancos de dados. Atualmente, atuo como Analista de Sistemas, participando de projetos de migração de sistemas legados para o Odoo e iniciativas de automação de dados, utilizando DAGs e integração entre sistemas.
+        Desde 2023, venho me dedicando ao Desenvolvimento de Sistemas, com ênfase em back-end, automação e bancos de
+        dados. Atualmente, atuo como Analista de Sistemas, participando de projetos de migração de sistemas legados para
+        o Odoo e iniciativas de automação de dados, utilizando DAGs e integração entre sistemas.
       </p>
       <p>
-        Possuo experiência prática com Programação Orientada a Objetos, SQL, desenvolvimento web e estruturação de dados. Estou em constante evolução, buscando contribuir com soluções robustas e sustentáveis. Tenho grande interesse em ERP e orquestração de dados, sempre focando em unir conhecimento técnico à entrega de valor real para as operações.
+        Possuo experiência prática com Programação Orientada a Objetos, SQL, desenvolvimento web e estruturação de
+        dados. Estou em constante evolução, buscando contribuir com soluções robustas e sustentáveis. Tenho grande
+        interesse em ERP e orquestração de dados, sempre focando em unir conhecimento técnico à entrega de valor real
+        para as operações.
       </p>
     </section>
 
@@ -74,10 +77,12 @@
         <a class="button-link" href="mailto:alex.abreu.softwaredeveloper@gmail.com" aria-label="Enviar email para Alex">
           <i class="fas fa-envelope"></i> Email
         </a>
-        <a class="button-link" href="https://github.com/AlexAbreuGomes" target="_blank" aria-label="Acessar GitHub de Alex">
+        <a class="button-link" href="https://github.com/AlexAbreuGomes" target="_blank"
+          aria-label="Acessar GitHub de Alex">
           <i class="fab fa-github"></i> GitHub
         </a>
-        <a class="button-link" href="https://www.linkedin.com/in/alexdeabreu/" target="_blank" aria-label="Acessar LinkedIn de Alex">
+        <a class="button-link" href="https://www.linkedin.com/in/alexdeabreu/" target="_blank"
+          aria-label="Acessar LinkedIn de Alex">
           <i class="fab fa-linkedin"></i> LinkedIn
         </a>
       </div>
@@ -86,26 +91,39 @@
     <section aria-label="Projetos">
       <h2>Projetos</h2>
       <div class="projects">
-        <article class="project-card">
+        <a class="project-card"
+          href="https://github.com/AlexAbreuGomes/app-senac-aprendizagem/tree/main/app-senac-aprendizagem"
+          target="_blank" rel="noopener" aria-label="Ver código do projeto Conecta Aprendiz no GitHub">
           <h3>Conecta Aprendiz</h3>
-          <p>Aplicativo criado com uma equipe de desenvolvedores para conectar os novos aprendizes, com dicas, esclarecimentos de dúvidas e um quiz interativo com finalidade de promover o aprendizado.</p>
-          <a href="https://github.com/AlexAbreuGomes/app-senac-aprendizagem/tree/main/app-senac-aprendizagem" target="_blank" rel="noopener">Ver código</a>
-        </article>
-        <article class="project-card">
+          <p>Aplicativo criado com uma equipe de desenvolvedores para conectar os novos aprendizes, com dicas,
+            esclarecimentos de dúvidas e um quiz interativo com finalidade de promover o aprendizado.</p>
+        </a>
+        <a class="project-card" href="https://github.com/AlexAbreuGomes/meu-acompanhante-seguro/tree/developer"
+          target="_blank" rel="noopener" aria-label="Ver código do projeto Meu Acompanhante Seguro no GitHub">
           <h3>Meu Acompanhante Seguro</h3>
-          <p>Site voltado a auxiliar pessoas que estão acompanhando outras em hospitais, avisando sobre os perigos invisíveis dentro do ambiente hospitalar.</p>
-          <a href="https://github.com/AlexAbreuGomes/meu-acompanhante-seguro/tree/developer" target="_blank" rel="noopener">Ver código</a>
-        </article>
-        <article class="project-card">
+          <p>Site voltado a auxiliar pessoas que estão acompanhando outras em hospitais, avisando sobre os perigos
+            invisíveis dentro do ambiente hospitalar.</p>
+        </a>
+        <a class="project-card" href="https://github.com/AlexAbreuGomes/parkingsystem/tree/main" target="_blank"
+          rel="noopener" aria-label="Ver código do projeto Parking System no GitHub">
           <h3>Parking System</h3>
-          <p>Sistema para desktop para gerenciamento de estacionamentos, permitindo o controle de vagas e o registro de entradas e saídas de veículos.</p>
-          <a href="https://github.com/AlexAbreuGomes/parkingsystem/tree/main" target="_blank" rel="noopener">Ver código</a>
-        </article>
-        <article class="project-card">
+          <p>Sistema para desktop para gerenciamento de estacionamentos, permitindo o controle de vagas e o registro de
+            entradas e saídas de veículos.</p>
+        </a>
+        <a class="project-card" href="https://github.com/AlexAbreuGomes/projeto-x" target="_blank" rel="noopener"
+          aria-label="Ver código do projeto Projeto X no GitHub">
           <h3>Projeto X</h3>
-          <p>Este projeto é uma aplicação de e-commerce construída com React Native (para o front-end) e uma API hospedada no Vercel (para o back-end com node.js). A aplicação permite que usuários visualizem produtos, naveguem por categorias. além da página de administração onde realizam outras operações comuns em lojas virtuais, como adicionar e excluir produtos e categorias.</p>
-          <a href="https://github.com/AlexAbreuGomes/projeto-x" target="_blank" rel="noopener">Ver código</a>
-        </article>
+          <p>Este projeto é uma aplicação de e-commerce construída com React Native (para o front-end) e uma API
+            hospedada no Vercel (para o back-end com node.js). A aplicação permite que usuários visualizem produtos,
+            naveguem por categorias. além da página de administração onde realizam outras operações comuns em lojas
+            virtuais, como adicionar e excluir produtos e categorias.</p>
+        </a>
+        <a class="project-card" href="https://github.com/AlexAbreuGomes/data_science_do_zero" target="_blank"
+          rel="noopener" aria-label="Ver código do projeto Anotações Data Science do Zero no GitHub">
+          <h3>Anotações Data Science do Zero</h3>
+          <p>Repositório dedicado a gravar meus estudos do livro data science do zero com código de exemplos e anotações
+            em .md</p>
+        </a>
       </div>
     </section>
   </main>
@@ -114,4 +132,5 @@
     &copy; 2025 Alex de Abreu
   </footer>
 </body>
+
 </html>
