--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <h3 class="subtitulo">Desenvolvedor de Sistemas | Data Engineer Jr. | Entusiasta de Tecnologia</h3>
   </header>
   <nav class="site-nav" aria-label="Navegação principal">
+    <button class="nav-toggle" aria-expanded="false" aria-label="Abrir menu de navegação">
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+    </button>
     <ul class="nav-links">
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#tecnologias">Tecnologias</a></li>
